# UpworkJobTests

./: pyproject.toml
upworktasktests/: amazon_eccomerce_upwork_test.ipynb  costco_parser_test.ipynb  costco_parser_test.ipynb.output  oddschecker_upwork_test.ipynb  realestate_upwork_test.ipynb  sound_visualyze.py  test.html  test.json  urls_28.txt
upworktasktests/analytics/: analytics_parser.ipynb  items_data_analytics.json
upworktasktests/https:/www.gdrfad.gov.ae/: data.json  en.ipynb  en.py
upworktasktests/musicalamerica/: test.ipynb
upworktasktests/python_gui_ds/: test.csv  tk_gui.py
upworktasktests/text_to_img/: code.py  notebook.ipynb
upworktasktests/twitter_bot/: twitter_bot_nb.ipynb
