[tool.poetry]
name = "upworktasktests"
version = "0.1.0"
description = ""
authors = ["Ivan <korneichuk.ik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.11.2"
webdriver-manager = "^4.0.0"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
